--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ section{
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image:url(Images/background.jpg) ; 
+    background-image:url(Images/bgpic.jpg) ; 
     background-color: #202020;
     background-size:cover;
     background-position: center;
