--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     color: var(--text-color);
 }
 header{
+    box-shadow: 0 4px 8px rgba(24, 24, 24, 0.885);
     background-color: #2b2b2b;
     position:relative;
     width: 100%;
@@ -69,7 +70,7 @@ span{
     display: none;
 }
 section{
-    padding: 160px 15% 120px;
+    padding: 130px 15% 100px;
 }
 .home{
     position: relative;
@@ -228,16 +229,23 @@ section{
 }
 
 
-.about-text h2{
+.about-text h2 {
     font-size: var(--h2-font);
     line-height: 1;
-}
+}    
+
 .about-text h4{
     font-size: 24px;
     line-height: 1.7;
     margin: 15px 0 30px;
     font-weight: 600;
     color: var(--text-color);
+    text-shadow: 0 0 10px rgba(104, 253, 250, 0.662), 
+                 0 0 20px rgba(255, 255, 255, 0.347), 
+                 0 0 30px rgba(0, 0, 0, 0);
+}
+.about-text span{
+    
 }
 .about-text p{
     text-align: justify;
@@ -373,38 +381,7 @@ section{
     filter: brightness(0) invert(1); /* Invert the icon color to be visible against the yellow background */
 }
 
-/*  
-.box2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #05b4ff;
-    width: 20%;
-    height: 20%;
-}
 
-.box2 h4{
-    font-size: 24px;
-    color:#05b4ff;
-    margin-bottom: 15px;
-    font-weight: 600;
-}
-.box2 img{
-    width: 10%;
-    height: auto;
-}
-.skill-content{
-    display: grid;
-    align-items: center;
-    gap: 2.5rem;
-    margin-top: 2rem;
-    grid-template-columns: repeat(auto-fit,minmax(250px , auto));
-}
-.skill-img{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
 
 .skills-section {
     display: flex;
@@ -586,4 +563,84 @@ section{
 .edu h1 {
     margin: 0;
     color: #ffffff;
+}
+
+/* PortFolio */
+
+.portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); /* Increased min width to 500px */
+    align-items: center;
+    gap: 2.5rem;
+    margin: 5rem;
+}
+
+.row {
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.row img {
+    width: 100%;
+    border-radius: 8px;
+    display: block;
+}
+
+.layer {
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.273), #ffae007e);
+    position: absolute;
+    border-radius: 8px;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 40px;
+    transition: height 0.5s;
+}
+
+.layer h5 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.layer p {
+    color: var(--second-color);
+    font-size: 1rem;
+    line-height: 1.8;
+}
+
+.layer i {
+    color: var(--main-color);
+    margin-top: 20px;
+    font-size: 20px;
+    background: var(--text-color);
+    height: 60px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+}
+
+.row:hover img {
+    transform: scale(1.1);
+}
+
+.row:hover .layer {
+    height: 100%;
+}
+
+.content {
+    background: var(--second-bg-color);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2.5rem;
 }
