Leetcode heatmap integrate

--- a/style.css
+++ b/style.css
@@ -586,7 +586,8 @@ section{
 
 
 .skills-section {
-    display: flex;
+    display:flex;
+    align-items: center;
     gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
@@ -603,6 +604,7 @@ section{
     width: 150px;
     height: auto;
     color: #ffffff;
+    gap: 20px;
 }
 .skill:hover {
     transform: scale(1.1);
@@ -629,7 +631,71 @@ section{
 /* TEXT ANIMATION */
 
 
+/* .skilldiv{
+    position:relative;
+    display: flexbox;    
+    justify-content: flex-start;
+    background-color: #0088cc00;
+} */
 
+
+
+
+
+.content-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 50px;
+    align-items: flex-start;
+    margin-top: 20px;
+  }
+
+
+.leetcodeimg {
+    flex: 1 1 35%;
+    text-align: center;
+  }
+  
+  .leetcodeimg h1 {
+    font-size: 22px;
+    color: #ffffff;
+    margin-bottom: 10px;
+  }
+  
+  /* Adding neon glow effect to the heatmap image */
+
+.heatmap img {
+    width: 100%;
+    max-width: 600px;
+    border-radius: 8px;
+    border: 2px solid #4a4747;
+    
+    /* Neon glow effect */
+    box-shadow: 0 0 15px 5px rgb(28, 28, 28),   /* Cyan glow */
+                0 0 5px 5px rgb(32, 31, 31),   /* Purple glow */
+                0 0 5px 5px rgb(25, 24, 24);     /* Green glow */
+    transition: box-shadow 0.1s ease  ;  /* Smooth transition for glow effect */
+  }
+  
+  /* Optional: intensify the glow effect on hover */
+  .heatmap img:hover {
+    transform: scale(1.02);
+    /* box-shadow: 0 0 10px 10px rgb(0, 217, 255),  /* Cyan glow */
+                /* 0 0 20px 10px rgba(0, 217, 255);    */ 
+
+                box-shadow: 0 8px 16px rgb(0, 242, 255),
+                0 8px 16px rgb(16, 243, 255);
+  }
+  
+  
+  
+  .leetcodeimg p {
+    color: #ffffff;
+    font-size: 16px;
+    margin-top: 10px;
+    
+  }
 
 
 .wrapper {
