--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     --main-color:#05b4ff;
     --big-font:5rem;
     --h2-font:3rem;
-    --p-font:1.1rem;
+    --p-font:1.05rem;
 }
 body{
     background-color: var(--bg-color);
@@ -128,8 +128,11 @@ ul.navbar a::before {
 ul.navbar a:hover::before {
     width: 100%;
 }
-
-
+.myname {
+    font-size: 2em;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgb(24, 23, 23);
+}
 
 .profile-picture {
     position: absolute;
@@ -448,8 +451,8 @@ section{
     margin: 15px 0 30px;
     font-weight: 600;
     color: var(--text-color);
-    text-shadow: 0 0 10px rgba(104, 253, 250, 0.662), 
-                 0 0 20px rgba(255, 255, 255, 0.347), 
+    text-shadow: 0 0 10px rgba(1, 228, 224, 0.467), 
+                 0 0 20px rgba(255, 255, 255, 0.097), 
                  0 0 30px rgba(0, 0, 0, 0);
 }
 .about-text span{
@@ -461,6 +464,7 @@ section{
     font-size: var(--p-font);
     line-height: 1.8;
     margin-bottom: 2rem;
+
 
 }
 #Email{
@@ -760,7 +764,7 @@ section{
     position: relative;
     top: 0;
     animation: slide 12s steps(4) infinite;
-    text-shadow: 0 0 8px rgba(0, 229, 255, 0.8), 0 0 15px rgba(252, 109, 109, 0); /* Adjusted shadow for new font size */
+    text-shadow: 0 0 8px rgba(0, 229, 255, 0.654), 0 0 15px rgba(252, 109, 109, 0); /* Adjusted shadow for new font size */
 }
 
 @keyframes slide {
